--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,12 @@ header {
   width: 100%;
   box-shadow: 0 2px 4px rgba(0,0,0,0.1);
   transition: background-color 0.3s;
+    z-index: 1000; 
+}
+
+.logo img{
+  width: 130px;
+  height: auto;
 }
 
 .header-wrapper {
@@ -97,18 +103,28 @@ header {
 .overlay-text {
   position: absolute;
   top: 50%;
-  left: 10%; /* Slightly to the left */
   transform: translateY(-50%); /* Vertically center */
-  color: white; /* Assuming a dark image, for contrast */
   text-align: left;
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr); 
 }
 
 .overlay-text h1 {
-  font-size: 2em; /* Adjust as needed */
+  grid-column: 2 / 4; 
+  font-size: 42px;
+  color: #f4f4f4;
+  font-family: 'wf_93c16d86ec9d47d0a2a36894f', sans-serif;
+  margin: 0;
 }
 
 .overlay-text p {
-  font-size: 1em; /* Adjust as needed */
+  padding-top: 18px;
+  margin: 0;
+  grid-column: 2 / 4; 
+  font-size: 34px;
+  color: #f4f4f4;
+  font-family: 'wf_93c16d86ec9d47d0a2a36894f', sans-serif;
 }
 
 
@@ -123,18 +139,43 @@ header {
 }
 
 .about-text-container{
-  max-width: 960px;
+  max-width: 967px;
 }
 
-
-
 .about-text{
-  font-size: 27px;
+  font-size: 28px;
   color: #f4f4f4;
   font-family: 'wf_93c16d86ec9d47d0a2a36894f', sans-serif;
   line-height: 1.6em;
+  padding-bottom: 50px;
+  margin: 0;
 }
 
+
+.carousel-outer-section{
+  background: #2B2B2B;
+  height: 363px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.carousel-title{
+  width: 100%;
+  display: grid;
+    grid-template-columns: repeat(4, 1fr); 
+}
+.carousel-title h3{
+  grid-column: 2 / 4; 
+  margin-top:40px;
+  margin-bottom: 0px;
+  padding: 0px;
+  font-size: 24px;
+    color: #f4f4f4;
+    font-family: 'wf_93c16d86ec9d47d0a2a36894f', sans-serif;
+
+}
 
 #carousel-section {
   display: flex;
@@ -142,22 +183,31 @@ header {
   justify-content: space-between; /* This will position the arrows at the ends */
   width: 100%;
   position: relative;
-  height: 363px;
-  background: #2B2B2B;
+  height: 100%;
 }
 
-.carousel-container {
+#carousel-container {
   display: flex;
   justify-content: center; /* Center the logos */
   align-items: center;
   flex-grow: 1; /* Allow the container to take up available space */
   background: transparent;
+  flex-direction: row;
+  position: relative;
 }
 
-.carousel-logo {
-  max-width: 100px; /* Adjust as needed *//* Initially hidden */
+#carousel-container img{
+  padding-left: 60px;
+  padding-right: 60px;
+}
+.fade-in {
+  opacity: 0; /* Start with image invisible */
+  transition: opacity 1s ease; /* Transition effect over 2 seconds */
+}
+
+.fade-out {
+  opacity: 1;
   transition: opacity 1s ease;
-   /* Display logos inline */
 }
 
 .carousel-arrow {
@@ -167,26 +217,30 @@ header {
   padding: 10px;
   cursor: pointer;
 }
-
-.carousel-dots {
+#carousel-dots-container {
   text-align: center;
-  padding-top: 10px;
-  position: absolute; /* Position dots at the bottom of the section */
-  bottom: 0px;
-  left: 50%;
-  transform: translateX(-50%);
+    position: absolute;
+    bottom: 70px; /* Adjust this value as needed */
+    left: 50%;
+    transform: translateX(-50%); /* Centering it horizontally */
+    /* Other styles for the dots container */
 }
 
 .carousel-dot {
-  height: 15px;
-  width: 15px;
+  height: 6px;
+  width: 6px;
   margin: 0 5px;
-  background-color: #bbb;
+  background-color: #fff;
   border-radius: 50%;
   display: inline-block;
   cursor: pointer;
+  opacity: 0.8; /* Inactive dot opacity */
+  transition: opacity 0.3s ease;
 }
 
+.active-dot{
+  opacity: 1;
+}
 /* Accordion styles remain the same */
 
 .accordion-section{
@@ -196,8 +250,8 @@ header {
   justify-content: center;
   background: #161616;
   flex-direction: column;
-  padding-top: 80px;
-  padding-bottom: 50px;
+  padding-top: 70px;
+  padding-bottom: 40px;
 }
 
 .borderless-btn{
@@ -219,7 +273,7 @@ header {
 }
 
 #accordion-content{
-  padding: 30px 40px;
+  padding-bottom: 40px;
   width: 900px;
 }
 
@@ -228,7 +282,8 @@ header {
     background-color: transparent;
     color: #444;
     cursor: pointer;
-    padding: 18px;
+    padding-top: 18px;
+    padding-bottom: 18px;
     width: 100%;
     border: none;
     text-align: left;
@@ -244,11 +299,9 @@ header {
     color: #777;
     font-weight: bold;
     float: right;
-    margin-left: 5px;
   }
   
   .accordion-content {
-    padding: 0 18px;
     background-color: transparent;
     display: none;
     overflow: hidden;
@@ -263,12 +316,34 @@ header {
 
   .accordion-wrapper{
     border-bottom: 1px solid rgb(53, 49, 49);
+    padding-top: 10px;
+    padding-bottom: 10px;
   }
   
   .accordion-title-section h3{
     font-size: 24px;
     color: #f4f4f4;
     font-family: 'wf_93c16d86ec9d47d0a2a36894f', sans-serif;
+    margin-bottom: 20px !important;
+  }
+
+
+
+
+.card-title-section{
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr); 
+  }
+
+  .card-title-section h2{
+    grid-column: 2 / 4; 
+    margin-top:35px;
+    margin-bottom: 25px;
+    font-size: 24px;
+      color: #f4f4f4;
+      font-family: 'wf_93c16d86ec9d47d0a2a36894f', sans-serif;
+  
   }
 
 
@@ -278,14 +353,18 @@ header {
     background-color: #161616;
     display: flex;
     justify-content: center;
-    align-items: center; /* Added padding for aesthetics */
+    align-items: center; 
+    flex-direction: column;
 }
 
 .card-grid {
     display: grid;
     grid-template-columns: repeat(3, 1fr); /* 3 columns */
-    grid-gap: 20px; /* Space between grid items */
+    grid-row-gap: 24px;
+    grid-column-gap: 38px;
     max-width: 960px; /* Adjust as needed */
+    padding-bottom: 40px;
+    padding-top: 40px;
 }
 
 .card {
@@ -297,7 +376,10 @@ header {
     text-align: center;
     height: 414px; /* Make cards of equal height */
     width: 300px;
-
+    border-width: 1px 1px 1px 1px;
+    border-style: solid;
+    border-color: rgba(85, 85, 85, 1);
+    border-radius: 6px;
 }
 
 .card img {
@@ -305,18 +387,104 @@ header {
     height: auto;
     max-height: 150px; /* Adjust as needed */
     object-fit: cover; /* Ensure proper fit for images */
+    border-radius: 6px;
 }
 
-.card h3 {
+.card div {
+  display: flex;
+  width: 90%;
+  height: 100%;
+  flex-direction: column;
+  align-items: flex-start;
+  padding-left: 14px;
+  padding-bottom: 30px;
+  padding-top: 25px;
+}
+
+.card div h3 {
     margin-top: 10px;
+    font-size: 18px;
+    color: #f4f4f4;
+    font-family: 'wf_93c16d86ec9d47d0a2a36894f', sans-serif;
+    text-align: left;
+    
 }
 
-.card p {
+.card div p {
     margin-top: 5px;
+    font-size: 14px;
+    color: #f4f4f4;
+    font-family: 'wf_93c16d86ec9d47d0a2a36894f', sans-serif;
 }
 
-.card a {
+.card div a {
     margin-top: auto;
     text-decoration: none;
-    color: blue;
+    font-size: 16px;
+    color: #00AEEF;
+    font-family: 'wf_93c16d86ec9d47d0a2a36894f', sans-serif;
+}
+
+footer{
+  width: 100%;
+  height: 229px;
+  background: #1A1E1F;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.footer-left{
+  grid-column: 2 / 1;
+  width: 100%;
+  display: flex;
+  justify-content: end;
+  align-items: center;
+}
+.footer-right{
+  grid-column: 3 / 3;
+  width: 100%;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+}
+
+.footer-left div{
+  padding-top: 20px;
+  text-align: start;
+}
+
+.footer-left div p{
+  color: #f4f4f4;
+  font-family: 'wf_93c16d86ec9d47d0a2a36894f', sans-serif;
+  font-size: 14px;
+  padding-top: 10px;
+}
+
+.footer-right div {
+  text-align: end;
+  padding-left: 75px;
+}
+
+.footer-right div img{
+padding-left: 5px;
+
+}
+
+.btn-withborder{
+  color: #ffffff;
+  font-family: 'wf_93c16d86ec9d47d0a2a36894f', sans-serif;
+  font-size: 16px;
+  border-radius:  6px;
+  border: none;
+  background-color:#00AEF3;
+  padding-top: 7px;
+  padding-bottom: 7px;
+  padding-left: 30px;
+  padding-right: 30px;
+  margin-top: 40px;
+}
+
+.btn-withborder:hover {
+  background-color: #D5D5D5;
+  color:#1A1E1F;
 }
