--- a/styles.css
+++ b/styles.css
@@ -1,29 +1,32 @@
 @font-face {
   font-display: block;
   font-family: wf_93c16d86ec9d47d0a2a36894f;
-  src: url("https://static.wixstatic.com/ufonts/643d94_93c16d86ec9d47d0a2a36894fbdd54fd/woff2/file.woff2") format("woff2"),
-  url("https://static.wixstatic.com/ufonts/643d94_93c16d86ec9d47d0a2a36894fbdd54fd/woff/file.woff") format("woff"),
-  url("https://static.wixstatic.com/ufonts/643d94_93c16d86ec9d47d0a2a36894fbdd54fd/ttf/file.ttf") format("ttf");
-  }
+  src: url("https://static.wixstatic.com/ufonts/643d94_93c16d86ec9d47d0a2a36894fbdd54fd/woff2/file.woff2")
+      format("woff2"),
+    url("https://static.wixstatic.com/ufonts/643d94_93c16d86ec9d47d0a2a36894fbdd54fd/woff/file.woff")
+      format("woff"),
+    url("https://static.wixstatic.com/ufonts/643d94_93c16d86ec9d47d0a2a36894fbdd54fd/ttf/file.ttf")
+      format("ttf");
+}
 
-
-body, html {
+body,
+html {
   margin: 0;
   padding: 0;
   font-family: Arial, sans-serif;
 }
 
 header {
-  background-color: #1A1E1F;
+  background-color: #1a1e1f;
   position: fixed;
   top: 0;
   width: 100%;
-  box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   transition: background-color 0.3s;
-    z-index: 1000; 
+  z-index: 1000;
 }
 
-.logo img{
+.logo img {
   width: 130px;
   height: auto;
 }
@@ -31,28 +34,25 @@ header {
 .header-wrapper {
   top: 0;
   width: 100%;
-  box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   transition: background-color 0.3s;
-  background-color: #1A1E1F;
+  background-color: #1a1e1f;
   display: grid;
-  grid-template-columns: 1fr 1fr; /* Two equal columns */
+  grid-template-columns: 1fr 1fr;
   align-items: center;
   height: 84px;
 }
 
 .logo {
   grid-column: 1 / 2;
-  justify-self: center; /* Center logo in the first column */
+  justify-self: center;
 }
 
 .navigation {
   grid-column: 2 / 3;
   display: flex;
-  justify-content: flex-start; /* Align nav items to the start of the second column */
+  justify-content: flex-start;
 }
-
-/* ... rest of the styles for navigation and logo ... */
-
 
 .navigation ul {
   list-style: none;
@@ -70,21 +70,18 @@ header {
   color: #f4f4f4;
   transition: color 0.3s;
   padding-left: 12px;
-  font-family: 'wf_93c16d86ec9d47d0a2a36894f', sans-serif;
+  font-family: "wf_93c16d86ec9d47d0a2a36894f", sans-serif;
   font-size: 14px;
 }
 
-.navigation a:hover, .navigation a.active {
-  color: #00A3E0;
+.navigation a:hover,
+.navigation a.active {
+  color: #00a3e0;
 }
 
 .page-content {
-  padding-top: 60px; /* Adjust based on header height */
+  padding-top: 60px;
 }
-
-
-
-
 
 .hero-section {
   position: relative;
@@ -103,57 +100,54 @@ header {
 .overlay-text {
   position: absolute;
   top: 50%;
-  transform: translateY(-50%); /* Vertically center */
+  transform: translateY(-50%);
   text-align: left;
   width: 100%;
   display: grid;
-  grid-template-columns: repeat(4, 1fr); 
+  grid-template-columns: repeat(4, 1fr);
 }
 
 .overlay-text h1 {
-  grid-column: 2 / 4; 
+  grid-column: 2 / 4;
   font-size: 42px;
   color: #f4f4f4;
-  font-family: 'wf_93c16d86ec9d47d0a2a36894f', sans-serif;
+  font-family: "wf_93c16d86ec9d47d0a2a36894f", sans-serif;
   margin: 0;
 }
 
 .overlay-text p {
   padding-top: 18px;
   margin: 0;
-  grid-column: 2 / 4; 
+  grid-column: 2 / 4;
   font-size: 34px;
   color: #f4f4f4;
-  font-family: 'wf_93c16d86ec9d47d0a2a36894f', sans-serif;
+  font-family: "wf_93c16d86ec9d47d0a2a36894f", sans-serif;
 }
-
-
 
 .about-text-section {
   width: 100%;
   height: 465px;
-  background-color: #2B2B2B;
+  background-color: #2b2b2b;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.about-text-container{
+.about-text-container {
   max-width: 967px;
 }
 
-.about-text{
+.about-text {
   font-size: 28px;
   color: #f4f4f4;
-  font-family: 'wf_93c16d86ec9d47d0a2a36894f', sans-serif;
+  font-family: "wf_93c16d86ec9d47d0a2a36894f", sans-serif;
   line-height: 1.6em;
   padding-bottom: 50px;
   margin: 0;
 }
 
-
-.carousel-outer-section{
-  background: #2B2B2B;
+.carousel-outer-section {
+  background: #2b2b2b;
   height: 363px;
   display: flex;
   justify-content: center;
@@ -161,26 +155,25 @@ header {
   flex-direction: column;
 }
 
-.carousel-title{
+.carousel-title {
   width: 100%;
   display: grid;
-    grid-template-columns: repeat(4, 1fr); 
+  grid-template-columns: repeat(4, 1fr);
 }
-.carousel-title h3{
-  grid-column: 2 / 4; 
-  margin-top:40px;
+.carousel-title h3 {
+  grid-column: 2 / 4;
+  margin-top: 40px;
   margin-bottom: 0px;
   padding: 0px;
   font-size: 24px;
-    color: #f4f4f4;
-    font-family: 'wf_93c16d86ec9d47d0a2a36894f', sans-serif;
-
+  color: #f4f4f4;
+  font-family: "wf_93c16d86ec9d47d0a2a36894f", sans-serif;
 }
 
 #carousel-section {
   display: flex;
   align-items: center;
-  justify-content: space-between; /* This will position the arrows at the ends */
+  justify-content: space-between;
   width: 100%;
   position: relative;
   height: 100%;
@@ -188,21 +181,21 @@ header {
 
 #carousel-container {
   display: flex;
-  justify-content: center; /* Center the logos */
+  justify-content: center;
   align-items: center;
-  flex-grow: 1; /* Allow the container to take up available space */
+  flex-grow: 1;
   background: transparent;
   flex-direction: row;
   position: relative;
 }
 
-#carousel-container img{
+#carousel-container img {
   padding-left: 60px;
   padding-right: 60px;
 }
 .fade-in {
-  opacity: 0; /* Start with image invisible */
-  transition: opacity 1s ease; /* Transition effect over 2 seconds */
+  opacity: 0;
+  transition: opacity 1s ease;
 }
 
 .fade-out {
@@ -211,19 +204,23 @@ header {
 }
 
 .carousel-arrow {
-  background-color: #333;
+  background-color: transparent;
   color: white;
   border: none;
   padding: 10px;
   cursor: pointer;
 }
+.large-arrow {
+  font-size: 48px;
+  padding: 70px;
+}
+
 #carousel-dots-container {
   text-align: center;
-    position: absolute;
-    bottom: 70px; /* Adjust this value as needed */
-    left: 50%;
-    transform: translateX(-50%); /* Centering it horizontally */
-    /* Other styles for the dots container */
+  position: absolute;
+  bottom: 70px;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .carousel-dot {
@@ -234,16 +231,15 @@ header {
   border-radius: 50%;
   display: inline-block;
   cursor: pointer;
-  opacity: 0.8; /* Inactive dot opacity */
+  opacity: 0.8;
   transition: opacity 0.3s ease;
 }
 
-.active-dot{
+.active-dot {
   opacity: 1;
 }
-/* Accordion styles remain the same */
 
-.accordion-section{
+.accordion-section {
   width: 100%;
   display: flex;
   align-items: center;
@@ -254,140 +250,130 @@ header {
   padding-bottom: 40px;
 }
 
-.borderless-btn{
-  
-    color: #00AFE3;       
-    background: none;    
-    border: none;       
-    font-size: 20px;     
-    cursor: pointer;     
-    font-family: 'wf_93c16d86ec9d47d0a2a36894f', sans-serif; 
+.borderless-btn {
+  color: #00afe3;
+  background: none;
+  border: none;
+  font-size: 20px;
+  cursor: pointer;
+  font-family: "wf_93c16d86ec9d47d0a2a36894f", sans-serif;
 }
 
-
-.accordion-title-section{
+.accordion-title-section {
   width: 900px;
   display: flex;
   justify-content: space-between;
   flex-direction: row;
 }
 
-#accordion-content{
+#accordion-content {
   padding-bottom: 40px;
   width: 900px;
 }
 
-
 .accordion-header {
-    background-color: transparent;
-    color: #444;
-    cursor: pointer;
-    padding-top: 18px;
-    padding-bottom: 18px;
-    width: 100%;
-    border: none;
-    text-align: left;
-    outline: none;
-    transition: 0.4s;
-    font-size: 18px;
-    color: #f4f4f4;
-    font-family: 'wf_93c16d86ec9d47d0a2a36894f', sans-serif;
+  background-color: transparent;
+  color: #444;
+  cursor: pointer;
+  padding-top: 18px;
+  padding-bottom: 18px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  transition: 0.4s;
+  font-size: 18px;
+  color: #f4f4f4;
+  font-family: "wf_93c16d86ec9d47d0a2a36894f", sans-serif;
+}
 
-  }
-  
-  .accordion-header:after {
-    color: #777;
-    font-weight: bold;
-    float: right;
-  }
-  
-  .accordion-content {
-    background-color: transparent;
-    display: none;
-    overflow: hidden;
-    transition: max-height 0.2s ease-out;
-    padding-bottom: 15px;
-    padding-top: 15px;
-    font-size: 14px;
-    color: #f4f4f4;
-    font-family: 'wf_93c16d86ec9d47d0a2a36894f', sans-serif;
+.accordion-header:after {
+  color: #777;
+  font-weight: bold;
+  float: right;
+}
 
-  }
+.accordion-content {
+  background-color: transparent;
+  display: none;
+  overflow: hidden;
+  transition: max-height 0.2s ease-out;
+  padding-bottom: 15px;
+  padding-top: 15px;
+  font-size: 14px;
+  color: #f4f4f4;
+  font-family: "wf_93c16d86ec9d47d0a2a36894f", sans-serif;
+}
 
-  .accordion-wrapper{
-    border-bottom: 1px solid rgb(53, 49, 49);
-    padding-top: 10px;
-    padding-bottom: 10px;
-  }
-  
-  .accordion-title-section h3{
-    font-size: 24px;
-    color: #f4f4f4;
-    font-family: 'wf_93c16d86ec9d47d0a2a36894f', sans-serif;
-    margin-bottom: 20px !important;
-  }
+.accordion-wrapper {
+  border-bottom: 1px solid rgb(53, 49, 49);
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
 
+.accordion-title-section h3 {
+  font-size: 24px;
+  color: #f4f4f4;
+  font-family: "wf_93c16d86ec9d47d0a2a36894f", sans-serif;
+  margin-bottom: 20px !important;
+}
 
-
-
-.card-title-section{
+.card-title-section {
   width: 100%;
   display: grid;
-  grid-template-columns: repeat(4, 1fr); 
-  }
+  grid-template-columns: repeat(4, 1fr);
+}
 
-  .card-title-section h2{
-    grid-column: 2 / 4; 
-    margin-top:35px;
-    margin-bottom: 25px;
-    font-size: 24px;
-      color: #f4f4f4;
-      font-family: 'wf_93c16d86ec9d47d0a2a36894f', sans-serif;
-  
-  }
+.card-title-section h2 {
+  grid-column: 2 / 4;
+  margin-top: 35px;
+  margin-bottom: 25px;
+  font-size: 24px;
+  color: #f4f4f4;
+  font-family: "wf_93c16d86ec9d47d0a2a36894f", sans-serif;
+}
 
-
-  .card-section {
-    width: 100%;
-    height: 100%;
-    background-color: #161616;
-    display: flex;
-    justify-content: center;
-    align-items: center; 
-    flex-direction: column;
+.card-section {
+  width: 100%;
+  height: 100%;
+  background-color: #161616;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 .card-grid {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr); /* 3 columns */
-    grid-row-gap: 24px;
-    grid-column-gap: 38px;
-    max-width: 960px; /* Adjust as needed */
-    padding-bottom: 40px;
-    padding-top: 40px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-row-gap: 24px;
+  grid-column-gap: 38px;
+  max-width: 960px;
+  padding-bottom: 40px;
+  padding-top: 40px;
 }
 
 .card {
-    background-color: transparent;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    height: 414px; /* Make cards of equal height */
-    width: 300px;
-    border-width: 1px 1px 1px 1px;
-    border-style: solid;
-    border-color: rgba(85, 85, 85, 1);
-    border-radius: 6px;
+  background-color: transparent;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  height: 414px;
+  width: 300px;
+  border-width: 1px 1px 1px 1px;
+  border-style: solid;
+  border-color: rgba(85, 85, 85, 1);
+  border-radius: 6px;
 }
 
 .card img {
-    width: 100%;
-    height: auto;
-    max-height: 150px; /* Adjust as needed */
-    object-fit: cover; /* Ensure proper fit for images */
-    border-radius: 6px;
+  width: 100%;
+  height: auto;
+  max-height: 150px;
+  object-fit: cover;
+  border-radius: 6px; 
 }
 
 .card div {
@@ -402,45 +388,44 @@ header {
 }
 
 .card div h3 {
-    margin-top: 10px;
-    font-size: 18px;
-    color: #f4f4f4;
-    font-family: 'wf_93c16d86ec9d47d0a2a36894f', sans-serif;
-    text-align: left;
-    
+  margin-top: 10px;
+  font-size: 18px;
+  color: #f4f4f4;
+  font-family: "wf_93c16d86ec9d47d0a2a36894f", sans-serif;
+  text-align: left;
 }
 
 .card div p {
-    margin-top: 5px;
-    font-size: 14px;
-    color: #f4f4f4;
-    font-family: 'wf_93c16d86ec9d47d0a2a36894f', sans-serif;
+  margin-top: 5px;
+  font-size: 14px;
+  color: #f4f4f4;
+  font-family: "wf_93c16d86ec9d47d0a2a36894f", sans-serif;
 }
 
 .card div a {
-    margin-top: auto;
-    text-decoration: none;
-    font-size: 16px;
-    color: #00AEEF;
-    font-family: 'wf_93c16d86ec9d47d0a2a36894f', sans-serif;
+  margin-top: auto;
+  text-decoration: none;
+  font-size: 16px;
+  color: #00aeef;
+  font-family: "wf_93c16d86ec9d47d0a2a36894f", sans-serif;
 }
 
-footer{
+footer {
   width: 100%;
   height: 229px;
-  background: #1A1E1F;
+  background: #1a1e1f;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
 }
 
-.footer-left{
+.footer-left {
   grid-column: 2 / 1;
   width: 100%;
   display: flex;
   justify-content: end;
   align-items: center;
 }
-.footer-right{
+.footer-right {
   grid-column: 3 / 3;
   width: 100%;
   display: flex;
@@ -448,14 +433,14 @@ footer{
   align-items: center;
 }
 
-.footer-left div{
+.footer-left div {
   padding-top: 20px;
   text-align: start;
 }
 
-.footer-left div p{
+.footer-left div p {
   color: #f4f4f4;
-  font-family: 'wf_93c16d86ec9d47d0a2a36894f', sans-serif;
+  font-family: "wf_93c16d86ec9d47d0a2a36894f", sans-serif;
   font-size: 14px;
   padding-top: 10px;
 }
@@ -465,18 +450,17 @@ footer{
   padding-left: 75px;
 }
 
-.footer-right div img{
-padding-left: 5px;
-
+.footer-right div img {
+  padding-left: 5px;
 }
 
-.btn-withborder{
+.btn-withborder {
   color: #ffffff;
-  font-family: 'wf_93c16d86ec9d47d0a2a36894f', sans-serif;
+  font-family: "wf_93c16d86ec9d47d0a2a36894f", sans-serif;
   font-size: 16px;
-  border-radius:  6px;
+  border-radius: 6px;
   border: none;
-  background-color:#00AEF3;
+  background-color: #00aef3;
   padding-top: 7px;
   padding-bottom: 7px;
   padding-left: 30px;
@@ -485,6 +469,119 @@ padding-left: 5px;
 }
 
 .btn-withborder:hover {
-  background-color: #D5D5D5;
-  color:#1A1E1F;
+  background-color: #d5d5d5;
+  color: #1a1e1f;
+}
+.accordion-header .small-arrow {
+  float: right;
+  font-size: 18px;
+}
+.accordion-header {
+  overflow: auto;
+}
+
+
+
+
+
+
+@media screen and (max-width: 768px) {
+  .borderless-btn{
+    display: none;
+  }
+  .carousel-outer-section{
+    display: none;
+  }
+  h3{
+    display: none;
+  }
+}
+
+
+@media screen and (max-width: 768px) {
+  .overlay-text h1 {
+    font-size: 24px; /* smaller text size */
+    grid-column: 1 / -1;
+  }
+
+  .overlay-text p {
+    font-size: 16px;
+    grid-column: 1 / -1;
+  }
+}
+@media screen and (max-width: 768px) {
+  .about-text {
+    font-size: 16px;
+    text-align: center;
+  }
+}
+@media screen and (max-width: 768px) {
+  .accordion-header {
+    font-size: 16px;
+    padding: 10px 15px;
+  }
+
+  .accordion-content {
+    font-size: 14px;
+  }
+
+  #accordion-content {
+    width: 100%;
+    padding: 15px;
+  }
+  footer{
+    padding: 0px;
+    margin: 0px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .card-grid {
+    grid-template-columns: 1fr; 
+    padding: 20px;
+  }
+
+  .card {
+    width: auto;
+  }
+}
+@media screen and (max-width: 768px) {
+  #carousel-section {
+    display: none;
+  }
+}
+@media screen and (max-width: 768px) {
+  footer {
+    grid-template-columns: 1fr;
+  }
+
+  .footer-left, .footer-right {
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
+
+  .footer-right div {
+    padding-left: 0;
+  }
+}
+@media screen and (max-width: 768px) {
+  .logo {
+    display: none; 
+  }
+
+  .navigation {
+    grid-column: 1 / -1;
+    justify-content: center;
+  }
+
+  .navigation ul {
+    justify-content: center;
+  }
+
+  .navigation li {
+    margin-left: 20px; 
+  }
+  .header-wrapper{
+    width: 97%;
+  }
 }
