--- a/styles.css
+++ b/styles.css
@@ -483,36 +483,44 @@ footer {
 
 
 
-
-
 @media screen and (max-width: 768px) {
   .borderless-btn{
-    display: none;
+    width: 40%;
+    padding-left: 35px;
+    font-size: 18px;
   }
   .carousel-outer-section{
     display: none;
   }
-  h3{
-    display: none;
+ .accordion-title-section h3{
+    padding-left: 5px;
+  }
+  .accordion-title-section{
+    width: 100%;
+    justify-content: space-around;
   }
 }
 
 
 @media screen and (max-width: 768px) {
   .overlay-text h1 {
-    font-size: 24px; /* smaller text size */
+    font-size: 24px;
     grid-column: 1 / -1;
+    padding-left: 15px;
   }
 
   .overlay-text p {
     font-size: 16px;
     grid-column: 1 / -1;
+    padding-left: 15px;
   }
 }
 @media screen and (max-width: 768px) {
   .about-text {
     font-size: 16px;
     text-align: center;
+    padding-left: 5px;
+    padding-right: 5px;
   }
 }
 @media screen and (max-width: 768px) {
@@ -523,11 +531,13 @@ footer {
 
   .accordion-content {
     font-size: 14px;
+    padding: 15px;
   }
 
   #accordion-content {
     width: 100%;
     padding: 15px;
+    
   }
   footer{
     padding: 0px;
@@ -561,7 +571,7 @@ footer {
   }
 
   .footer-right div {
-    padding-left: 0;
+    padding-right: 5px;
   }
 }
 @media screen and (max-width: 768px) {
